Added entity models.

--- a/CinemaCity/appsettings.json
+++ b/CinemaCity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CinemaCity-4b6219ac-4f71-42f1-98a7-ff52012a28d3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=CinemaCity;User Id=sa;Password=Emiliyan@2001;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
