--- a/CinemaCity/CinemaCity.csproj
+++ b/CinemaCity/CinemaCity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CinemaCity.Data\CinemaCity.Data.csproj" />
+    <ProjectReference Include="..\CinemaCity.Services\CinemaCity.Services.csproj" />
+    <ProjectReference Include="..\CinemaCity.Web.Infrastructure\CinemaCity.Web.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
