--- a/CinemaCity.Services/CinemaCity.Services.csproj
+++ b/CinemaCity.Services/CinemaCity.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CinemaCity.Common\CinemaCity.Common.csproj" />
     <ProjectReference Include="..\CinemaCity.Data\CinemaCity.Data.csproj" />
     <ProjectReference Include="..\CinemaCity.Web.Infrastructure\CinemaCity.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\CinemaCity.Web.ViewModels\CinemaCity.Web.ViewModels.csproj" />
