--- a/CinemaCity/CinemaCity.csproj
+++ b/CinemaCity/CinemaCity.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="wwwroot\images\movies\" />
   </ItemGroup>
 
