--- a/CinemaCity/appsettings.json
+++ b/CinemaCity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CinemaCity;User Id=sa;Password=Emiliyan@2001;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=CinemaCity;User Id=sa;Password=<your_password>;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
